# dexter

./: .gitignore  .pre-commit-config.yaml  API_CLIENT_CONSOLIDATION_STATUS.md  BACKEND_FIXES.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMMIT-MESSAGE-DEADLOCK-MODAL.md  CONSOLIDATION.md  DASHBOARD_FIX_REPORT.md  DEADLOCK-MODAL-IMPLEMENTATION-CONCLUSION.md  DEADLOCK-MODAL-IMPLEMENTATION-REPORT.md  DEADLOCK-MODAL-SUMMARY.md  DEVELOPMENT-DETAILS-DEADLOCK-MODAL.md  DEVELOPMENT_GUIDE.md  DISCOVER_IMPLEMENTATION.md  DISCOVER_SUMMARY.md  DOCUMENTATION-ANALYSIS.md  DOCUMENTATION-IMPROVEMENT-REPORT.md  Dexter-system-architecture.mermaid  FIXED.md  FIXES-SUMMARY.md  FIXES_SUMMARY.md  HOW_TO_FIX_FRONTEND.md  ICON_FIX_INSTRUCTIONS.md  IMPLEMENTATION-GUIDE.md  IMPORTANT_FILES.md  INTEGRATION-COMPLETE.md  MIGRATION_SUMMARY.md  PHASE1-COMPLETION-REPORT.md  PHASE1-COMPLETION-STATUS.md  PHASE1-COMPLETION-SUCCESS.md  PHASE4-PROGRESS-REPORT.md  PR-template-deadlock-analyzer.md  PROJECT-CLEANUP-SUMMARY.md  PROJECT-STATUS-UPDATE.md  PROJECT_OVERVIEW.md  PYDANTIC-COMPATIBILITY-REPORT.md  QUICK_START.md  README-API-PATH-CONSOLIDATION.md  (+37 more)
backend/: .env.example  ADOPTION_STRATEGY.md  MIGRATION_ANNOUNCEMENT.md  MIGRATION_GUIDE.md  PYTHON313_NEXT_STEPS.md  PYTHON313_STATUS_UPDATE.md  QUICK_REFERENCE.md  README.md  README_MIGRATION.md  check_dependencies.py  check_pydantic_compatibility.py  check_venv.bat  fix_dependencies.bat  fix_dependencies.py  fix_dependencies2.py  fix_fastapi_py313.py  fix_missing_dependencies.bat  fix_py313_windows.bat  fix_pydantic_compatibility.py  pyproject.toml  (+36 more)
(+779 files in other folders)
