# File: backend/pyproject.toml

[tool.poetry]
name        = "backend"
version     = "0.1.0"
description = "Backend API for Dexter - Sentry Observability Companion"
authors     = ["Your Name <you@example.com>"]
readme      = "README.md"

# â† Tell Poetry to look in `app/` for your Python package
packages = [
  { include = "app", from = "." }
]

[tool.poetry.dependencies]
python              = "^3.10"
fastapi             = "^0.111.0"
uvicorn             = { extras = ["standard"], version = "^0.29.0" }
pydantic            = "^2.7.1"
pydantic-settings   = "^2.2.1"
httpx               = "^0.27.0"
cachetools          = "^5.3.3"

[tool.poetry.dev-dependencies]
pytest              = "^7.4.0"
pytest-asyncio      = "^0.21.0"
black               = "^23.9.1"
isort               = "^5.12.0"
flake8              = "^6.0.0"
mypy                = "^1.5.1"

[build-system]
requires     = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
